// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordIndicator renders correctly for strong variant 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="PasswordIndicator/PasswordIndicator.tsx:33"
  data-style-src="react-strict-dom:web/runtime.js"
  data-testid="password-indicator-strong"
  style={{}}
>
  <div
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="PasswordIndicator/PasswordIndicator.tsx:34"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={12}
      bbWidth={12}
      color="#B0D944"
      fill="none"
      focusable={false}
      height={12}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 12,
            "width": 12,
          },
        ]
      }
      vbHeight={12}
      vbWidth={12}
      width={12}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="m6 .5-4.5 2v3c0 2.775 1.92 5.37 4.5 6 2.58-.63 4.5-3.225 4.5-6v-3zm3.5 5c0 2.26-1.49 4.345-3.5 4.965C3.99 9.845 2.5 7.76 2.5 5.5V3.15L6 1.595 9.5 3.15zm-5.795.295L3 6.5l2 2 4-4-.705-.71L5 7.085z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </div>
  <span
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="PasswordIndicator/PasswordIndicator.tsx:37"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    Strong
  </span>
</div>
`;

exports[`PasswordIndicator renders correctly for vulnerable variant 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="PasswordIndicator/PasswordIndicator.tsx:33"
  data-style-src="react-strict-dom:web/runtime.js"
  data-testid="password-indicator-vulnerable"
  style={{}}
>
  <div
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="PasswordIndicator/PasswordIndicator.tsx:34"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={12}
      bbWidth={12}
      color="#D13B3D"
      fill="none"
      focusable={false}
      height={12}
      meetOrSlice={0}
      minX={1}
      minY={0.5}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 12,
            "width": 12,
          },
        ]
      }
      vbHeight={11}
      vbWidth={10}
      width={12}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M6 1 2 2.5v3.045C2 8.07 3.705 10.425 6 11c2.295-.575 4-2.93 4-5.455V2.5zm3 4.545c0 2-1.275 3.85-3 4.415-1.725-.565-3-2.41-3-4.415v-2.35L6 2.07l3 1.125z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M6.5 7h-1v1h1zM6.5 3.5h-1V6h1z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </div>
  <span
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="PasswordIndicator/PasswordIndicator.tsx:37"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    Vulnerable
  </span>
</div>
`;
